--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 qt/arm-pro/build-vision_trace_host-Desktop*
-qt/pc-pro/vision_trace_pc/*.pro.user
-qt/arm-pro/vision_trace_host/*.pro.user
+qt/pc-pro/vision_trace_pc/*.pro.user*
+qt/arm-pro/vision_trace_host/*.pro.user*
